# bookget-py

./: .gitignore  CLAUDE.md  DEVELOPER.md  README.md  pyproject.toml
.claude/: PLAN_MODULARIZE.md  settings.json  settings.local.json  todo.md
.claude/commands/: release.md
.github/workflows/: release.yml
bookget/: __init__.py  __main__.py  config.py  exceptions.py  logger.py  main.py  utils.py
bookget/adapters/: __init__.py  base.py  registry.py
bookget/adapters/chinese/: __init__.py  ctext.py  hanchi.py  nlc_guji.py  shidianguji.py
bookget/adapters/iiif/: __init__.py  base_iiif.py  harvard.py  kyoto.py  ndl.py  princeton.py  stanford.py
bookget/adapters/other/: __init__.py  archive_org.py  ctext.py  european.py  hanchi.py  nlc_guji.py  shidianguji.py  taiwan.py  wikimedia_commons.py  wikisource.py
bookget/core/: __init__.py  resource_manager.py
bookget/downloaders/: __init__.py  base.py  iiif.py
bookget/models/: __init__.py  book.py  manifest.py  search.py
bookget/scripts/: images_to_pdf.py  siku_catalog_parser.py  strip_tu_marker.py
bookget/server/: __init__.py  app.py  routes.py  sse.py  static.py  tasks.py
bookget/storage/: __init__.py  file_storage.py
bookget/text_converters/: __init__.py  markdown_converter.py  plaintext_converter.py
bookget/text_parsers/: __init__.py  base.py  ctext_parser.py  hanchi_parser.py  shidianguji_parser.py  wikisource_parser.py
doc/: CLI_COMMANDS.md  IMPLEMENTATION_PLAN.md  RELEASE.md  TEST_STATUS.md
doc/websites/: README.md  臺灣中央研究院歷史語言研究所.md  识典古籍.md
downloads/hanjishilu_30211001/: metadata.json
packaging/: build.py  cli.spec  ui.spec
tests/: __init__.py  test_adapters.py  test_config.py  test_downloaders.py  test_exceptions.py  test_file_storage.py  test_hanchi.py  test_manifest.py  test_models.py  test_resource_manager.py  test_text_parsers.py  test_utils.py
ui/: package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/app/: App.tsx  index.html  mock-transport.ts
ui/src/: index.ts  types.ts
ui/src/components/: DownloadDashboard.tsx  ManifestTree.tsx  ProgressBar.tsx  TaskCard.tsx  TaskList.tsx
ui/src/hooks/: useDownloadManager.ts  useManifestTree.ts
ui/src/styles/: components.css  inject.ts  variables.css
(+5 files in other folders)
