[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookget"
version = "0.1.0"
description = "Download and parse ancient Chinese book resources from digital libraries"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["ancient-books", "digital-library", "downloader", "classical-chinese"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]

dependencies = [
    "aiohttp>=3.8",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
    "ruff>=0.4",
]
browser = [
    "playwright>=1.40",
]

[project.scripts]
bookget = "bookget.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bookget*"]
exclude = ["tests*", "doc*"]
